--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.WelcomeActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,12 +19,20 @@
         </activity>
         <activity
             android:name=".activities.InstructionActivity"
-            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
             android:label="@string/title_activity_instruction"
-            android:parentActivityName=".activities.WelcomeActivity" >
+            android:parentActivityName=".activities.WelcomeActivity"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.WelcomeActivity" />
+        </activity>
+        <activity
+            android:name=".activities.PrivateWordsResultsActivity"
+            android:label="@string/title_activity_private_words_results"
+            android:parentActivityName=".activities.InstructionActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.hancheng.privatewords.activities.InstructionActivity" />
         </activity>
     </application>
 
