Added guava files and show the tabs with viewpager, need to customize the action bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'net.danlew:android.joda:2.7.2'
+    compile 'com.intellij:annotations:+@jar'
+    compile 'com.google.guava:guava:13.0.1'
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.afollestad:material-dialogs:0.7.5.1'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.android.support:support-v4:21.0.+'
+    compile group: 'com.google.guava', name: 'guava', version: '15.0'
 }
